simple_nginx_page/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app-name: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
