simple_nginx_page/cluster-ip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
  - port: 80
