simple_nginx_page/node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  type: NodePort
  selector:
    app-name: nginx-app
  ports:
  - port: 4000 # ?
    targetPort: 80 #порт пода
    nodePort: 30500 #порт на ноде
